--- a/design1.html
+++ b/design1.html
@@ -45,11 +45,11 @@
             .container{
                 display: grid;
                 grid-template-columns: repeat(3, 1fr);
-                grid-gap: 2em;
+                column-gap: 2em;
                 background-color: white;
-                border: white;
-                      
+                padding: 4%;
             }
+            
         </style>
     </head>
     <body>
